docs: keep Chinese documentation only